replace Log extension class with custom DiagnosticHandler: resolves global state problem (issue #4), compatible with jshell (issue #2)